:airplane: 麻雀牌っぽいものを変換する機能の追加

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     </div>
     <script src="../__origin/js/vue.min.js"></script>
     <script src="../__origin/js/onesdk.js"></script>
+    <script src="./formj/formj.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
